--- a/test/index.html
+++ b/test/index.html
@@ -11,9 +11,14 @@
 <script src="../src/js/bootstrap-tree.js"></script>
 <script>
 $(function(){
-	  $('#tree').bootstrapTree({
-		  openOnLoad: false
-	  });
+	$('#tree').bootstrapTree({
+		openOnLoad: false,
+		icons: {
+			openedNodeIcon: 'glyphicon-folder-open',
+			closedNodeIcon: 'glyphicon-folder-close',
+			leafNodeIcon: 'glyphicon-file'
+		}
+	});
 });
 function closeTree(){
 	$('#tree').bootstrapTree('closeAll');
@@ -67,5 +72,14 @@ function openTree(){
     <button class="btn btn-default" onclick="closeTree()">关闭</button>
     <button class="btn btn-default" onclick="openTree()">打开</button>
 </div>
+<footer>
+	<div class="container">
+        <ul>
+            <li><a href="http://jquery.com">jQuery</a>
+            <li><a href="http://www.bootcss.com/">Bootstrap 中文网</a>
+            <li><a href="http://glyphicons.com/">glyphicons</a>
+        </ul>
+	</div>
+</footer>
 </body>
 </html>
