--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head lang="zh-CN">
 <title>index.html</title>
 <meta charset="utf-8">
-
-<link rel="stylesheet" href="../src/css/bootstrap-tree.css">
-<link rel="stylesheet" href="../resources/css/bootstrap.min.css">
-<script src="../resources/js/jquery-1.11.2.min.js"></script>
-<script src="../resources/js/bootstrap.min.js"></script>
-<script src="../src/js/bootstrap-tree.js"></script>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="css/bootstrap-tree.min.css">
+<link rel="stylesheet" href="css/bootstrap.min.css">
+<script src="js/jquery-1.11.2.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/bootstrap-tree.min.js"></script>
 <script>
 $(function(){
 	$('#tree').bootstrapTree({
@@ -29,9 +30,25 @@ function openTree(){
 </script>
 </head>
 <body>
+<nav class="navbar navbar-default">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-navbar-collapse" aria-expanded="false">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">bootstrap tree</a>
+    </div>
+    <div class="collapse navbar-collapse" id="nav-navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#demo">示例</a>
+      </ul>
+    </div> 
+  </div>
+</nav>
 <div class="container well">
-    <fieldset>
-        <legend>bootstrap tree</legend>
+    <fieldset id="demo">
+        <legend>bootstrap tree 示例</legend>
 		<div id="tree">
 			<ul>
 				<li><span> 父节点</span> <a href="#">链接1</a>
@@ -78,6 +95,7 @@ function openTree(){
             <li><a href="http://jquery.com">jQuery</a>
             <li><a href="http://www.bootcss.com/">Bootstrap 中文网</a>
             <li><a href="http://glyphicons.com/">glyphicons</a>
+            <li>基于: <a href="http://runjs.cn/detail/yb2n864s">bootstrap tree</a>
         </ul>
 	</div>
 </footer>
