--- a/index.html
+++ b/index.html
@@ -7,33 +7,40 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/bootstrap-tree.min.css">
 <link rel="stylesheet" href="css/bootstrap.min.css">
+<style>
+body { padding-top: 70px; }
+#demo:target, #usage:target, #parameter:target { padding-top: 70px; }
+</style>
 <script src="js/jquery-1.11.2.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/bootstrap-tree.min.js"></script>
 <script>
 $(function(){
-	$('#tree').bootstrapTree({
-		openOnLoad: false,
-		icons: {
-			openedNodeIcon: 'glyphicon-folder-open',
-			closedNodeIcon: 'glyphicon-folder-close',
-			leafNodeIcon: 'glyphicon-file'
-		}
-	});
+    $('#tree').bootstrapTree({
+        openOnLoad: false,
+        icons: {
+            openedNodeIcon: 'glyphicon-folder-open',
+            closedNodeIcon: 'glyphicon-folder-close',
+            leafNodeIcon: 'glyphicon-file'
+        }
+    });
 });
 function closeTree(){
-	$('#tree').bootstrapTree('closeAll');
+    $('#tree').bootstrapTree('closeAll');
 }
 function openTree(){
-	$('#tree').bootstrapTree('openAll');
+    $('#tree').bootstrapTree('openAll');
 }
 </script>
 </head>
 <body>
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-navbar-collapse" aria-expanded="false">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
@@ -41,51 +48,148 @@ function openTree(){
     </div>
     <div class="collapse navbar-collapse" id="nav-navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#demo">示例</a>
+        <li><a href="#demo">示例</a>
+        <li><a href="#usage">用法</a>
+        <li><a href="#parameter">参数</a>
+        <li><a href="#function">方法</a>
       </ul>
     </div> 
   </div>
 </nav>
 <div class="container well">
-  <fieldset id="demo">
-    <legend>bootstrap tree 示例</legend>
-    <div id="tree">
-      <ul>
-        <li><span> 父节点</span> <a href="#">链接1</a>
-          <ul>
-            <li><span> 子节点</span> <a href="#">链接2</a>
-              <ul>
-                <li><span> 子子节点</span> <a href="#">链接3</a>
-                  <ul>
-                    <li><span> 子子子节点</span> <a href="#">链接4</a></li>
-                  </ul>
-                </li>
-              </ul>
-              <ul>
-                <li><span> 子子节点</span> <a href="#">链接5</a></li>
-              </ul>
-            </li>
-          </ul>
-          <ul>
-            <li><span> 子节点</span> <a href="#">链接6</a>
-              <ul>
-                <li><span> 子子节点</span> <a href="#">链接7</a>
-                  <ul>
-                    <li><span> 子子子节点</span> <a href="#">链接8</a>
-                    </li>
-                  </ul>
-                </li>
-              </ul>
-            </li>
-          </ul>
-          <ul>
-            <li><span> 子节点</span> <a href="#">链接9</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </fieldset>
+  <div class="alert alert-danger">目前仅支持v3版本</div>
+  <div id="demo">
+    <fieldset>
+      <legend>bootstrap tree 示例</legend>
+      <div id="tree">
+        <ul>
+          <li><span> 父节点</span> <a href="#">链接1</a>
+            <ul>
+              <li><span> 子节点</span> <a href="#">链接2</a>
+                <ul>
+                  <li><span> 子子节点</span> <a href="#">链接3</a>
+                    <ul>
+                      <li><span> 子子子节点</span> <a href="#">链接4</a></li>
+                    </ul>
+                  </li>
+                </ul>
+                <ul>
+                  <li><span> 子子节点</span> <a href="#">链接5</a></li>
+                </ul>
+              </li>
+            </ul>
+            <ul>
+              <li><span> 子节点</span> <a href="#">链接6</a>
+                <ul>
+                  <li><span> 子子节点</span> <a href="#">链接7</a>
+                    <ul>
+                      <li><span> 子子子节点</span> <a href="#">链接8</a>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+            <ul>
+              <li><span> 子节点</span> <a href="#">链接9</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </fieldset>
+  </div>
   <hr>
+  <div id="usage">
+    <fieldset>
+      <legend>用法</legend>
+      <p>示例html代码, 注意这里的<code>&lt;span&gt;</code>里除了节点文本不要加其他内容, 如果需要在<code>&lt;span&gt;</code>之后加.</p>
+      <pre>
+&lt;div id="tree-demo"&gt;
+  &lt;ul&gt;
+    &lt;li&gt;&lt;span&gt; 父节点&lt;/span&gt; &lt;a href="#"&gt;链接1&lt;/a&gt;
+      &lt;ul&gt;
+        &lt;li&gt;&lt;span&gt; 子节点&lt;/span&gt; &lt;a href="#"&gt;链接2&lt;/a&gt;
+          &lt;ul&gt;
+            &lt;li&gt;&lt;span&gt; 子子节点&lt;/span&gt; &lt;a href="#"&gt;链接3&lt;/a&gt;
+              &lt;ul&gt;
+                &lt;li&gt;&lt;span&gt; 子子子节点&lt;/span&gt; &lt;a href="#"&gt;链接4&lt;/a&gt;&lt;/li&gt;
+              &lt;/ul&gt;
+            &lt;/li&gt;
+          &lt;/ul&gt;
+          &lt;ul&gt;
+            &lt;li&gt;&lt;span&gt; 子子节点&lt;/span&gt; &lt;a href="#"&gt;链接5&lt;/a&gt;&lt;/li&gt;
+          &lt;/ul&gt;
+        &lt;/li&gt;
+      &lt;/ul&gt;
+      &lt;ul&gt;
+        &lt;li&gt;&lt;span&gt; 子节点&lt;/span&gt; &lt;a href="#"&gt;链接6&lt;/a&gt;
+          &lt;ul&gt;
+            &lt;li&gt;&lt;span&gt; 子子节点&lt;/span&gt; &lt;a href="#"&gt;链接7&lt;/a&gt;
+              &lt;ul&gt;
+                &lt;li&gt;&lt;span&gt; 子子子节点&lt;/span&gt; &lt;a href="#"&gt;链接8&lt;/a&gt;
+                &lt;/li&gt;
+              &lt;/ul&gt;
+            &lt;/li&gt;
+          &lt;/ul&gt;
+        &lt;/li&gt;
+      &lt;/ul&gt;
+      &lt;ul&gt;
+        &lt;li&gt;&lt;span&gt; 子节点&lt;/span&gt; &lt;a href="#"&gt;链接9&lt;/a&gt;&lt;/li&gt;
+      &lt;/ul&gt;
+    &lt;/li&gt;
+  &lt;/ul&gt;
+&lt;/div&gt;
+      </pre>
+      <p>调用: <code>$('#tree-demo').bootstrapTree();</code></p>
+    </fieldset>
+  </div>
+  <hr>
+  <div id="parameter">
+    <fieldset>
+      <legend>参数</legend>
+      <div class="well">
+        <ul>
+          <li><span>openOnLoad: 默认false, 初始化时候是否展开树</span></li>
+          <li>
+            <span>icons: 图标</span>
+            <ul>
+              <li>openedNodeIcon: 节点打开时候的图标, 默认 glyphicon-folder-open</li>
+              <li>closedNodeIcon: 节点关闭时候的图标, 默认 glyphicon-folder-close</li>
+              <li>leafNodeIcon: 叶子节点图标, 默认 glyphicon-file</li>
+            </ul>
+          </li>
+        </ul>
+        <p>使用</p>
+        <pre>
+$('#tree').bootstrapTree({
+    openOnLoad: false,
+    icons: {
+        openedNodeIcon: 'glyphicon-folder-open',
+        closedNodeIcon: 'glyphicon-folder-close',
+        leafNodeIcon: 'glyphicon-file'
+    }
+});
+        </pre>
+      </div>
+    </fieldset>
+  </div>
+  <hr>
+  <div id="function">
+    <fieldset>
+      <legend>方法</legend>
+      <div class="well">
+        <ul>
+          <li><span>openAll: 打开所有节点</span></li>
+          <li><span>closeAll: 关闭所有节点</span></li>
+        </ul>
+        <p>使用</p>
+        <pre>
+$('#tree').bootstrapTree('openAll');
+$('#tree').bootstrapTree('closeAll');
+        </pre>
+      </div>
+    </fieldset>
+  </div>
   <button class="btn btn-default" onclick="closeTree()">关闭</button>
   <button class="btn btn-default" onclick="openTree()">打开</button>
 </div>
