--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@ function openTree(){
           <li>
             <span>icons: 图标</span>
             <ul>
-              <li>openedNodeIcon: 节点打开时候的图标, 默认 glyphicon-folder-open</li>
-              <li>closedNodeIcon: 节点关闭时候的图标, 默认 glyphicon-folder-close</li>
-              <li>leafNodeIcon: 叶子节点图标, 默认 glyphicon-file</li>
+              <li>openedNodeIcon: 节点打开时候的图标, 默认 glyphicon-minus</li>
+              <li>closedNodeIcon: 节点关闭时候的图标, 默认 glyphicon-plus</li>
+              <li>leafNodeIcon: 叶子节点图标, 默认 glyphicon-leaf</li>
             </ul>
           </li>
         </ul>
