--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@ function openTree(){
 </nav>
 <div class="container well">
   <div class="alert alert-danger">目前仅支持v3版本</div>
+  <div id="download">
+    <a href="https://github.com/ofedge/bootstrap-tree/archive/master.zip" class="btn btn-primary">下载</a>
+    <a href="https://github.com/ofedge/bootstrap-tree" class="btn btn-primary">源码</a>
+  </div>
   <div id="demo">
     <fieldset>
       <legend>bootstrap tree 示例</legend>
