--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head lang="zh-CN">
-<title>index.html</title>
+<title>bootstrap tree</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="Keywords" content="bootstrap tree">
+<meta name="Description" content="基于bootstrap的树插件">
 <link rel="stylesheet" href="css/bootstrap-tree.min.css">
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <style>
 body { padding-top: 70px; }
-#demo:target, #usage:target, #parameter:target { padding-top: 70px; }
+#demo:target, #usage:target, #parameter:target, #function:target { padding-top: 70px; }
 </style>
 <script src="js/jquery-1.11.2.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
