--- a/test/index.html
+++ b/test/index.html
@@ -7,8 +7,8 @@
 <link rel="stylesheet" href="../src/css/bootstrap-tree.css">
 <script src="../resources/js/jquery-1.11.2.min.js"></script>
 <script src="../resources/js/bootstrap.min.js"></script>
-<script src="../src/js/bootstrap-tree.js"></script>
-<!-- <script src="../lib/js/bootstrap-tree.min.js"></script> -->
+<!-- <script src="../src/js/bootstrap-tree.js"></script> -->
+<script src="../lib/js/bootstrap-tree.min.js"></script>
 <script>
 $(function(){
   $('#tree1').bootstrapTree({
