beta 2.0!!! 功能不变, 代码重构

--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,7 @@
 <script>
 $(function(){
   $('#tree1').bootstrapTree({
-    openOnLoad: true,
+    openOnLoad: false,
     icons: {
       openedNodeIcon: 'glyphicon-folder-open',
       closedNodeIcon: 'glyphicon-folder-close',
