--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ function init(){
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">bootstrap tree</a>
+      <a class="navbar-brand" href="#">bootstrap tree</a>
     </div>
     <div class="collapse navbar-collapse" id="nav-navbar-collapse">
       <ul class="nav navbar-nav">
@@ -65,6 +65,13 @@ function init(){
     </div> 
   </div>
 </nav>
+<script>
+$('#nav-navbar-collapse > ul >li').mouseover(function(){
+	$(this).addClass('active');
+}).mouseout(function(){
+	$(this).removeClass('active');
+});
+</script>
 <div class="container well">
   <div class="alert alert-danger">目前仅支持v3版本</div>
   <div id="download">
