--- a/bootstrap-tree/index.html
+++ b/bootstrap-tree/index.html
@@ -3,12 +3,12 @@
 <head lang="zh-CN">
 <title>index.html</title>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../resources/css/bootstrap.min.css">
-<link rel="stylesheet" href="../src/css/bootstrap-tree.css">
-<script src="../resources/js/jquery-1.11.2.min.js"></script>
-<script src="../resources/js/bootstrap.min.js"></script>
-<!-- <script src="../src/js/bootstrap-tree.js"></script> -->
-<script src="../lib/js/bootstrap-tree.min.js"></script>
+<link rel="stylesheet" href="http://apps.bdimg.com/libs/bootstrap/3.3.4/css/bootstrap.min.css">
+<link rel="stylesheet" href="src/css/bootstrap-tree.css">
+<script src="http://apps.bdimg.com/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script src="src/js/bootstrap-tree.js"></script>
+<!-- <script src="lib/js/bootstrap-tree.min.js"></script> -->
 <script>
 $(function(){
   $('#tree1').bootstrapTree({
