--- a/index.html
+++ b/index.html
@@ -1,246 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head lang="zh-CN">
-<title>bootstrap tree</title>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="Keywords" content="bootstrap tree">
-<meta name="Description" content="基于bootstrap的树插件">
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="css/bootstrap-tree.min.css">
-<style>
-body { padding-top: 70px; }
-#demo:target, #usage:target, #parameter:target, #function:target { padding-top: 70px; }
-ul li { list-style: none; }
-</style>
-<script src="js/jquery-1.11.2.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/bootstrap-tree.min.js"></script>
-<script>
-$(function(){
-    $('#tree').bootstrapTree({
-        openOnLoad: false,
-        icons: {
-            openedNodeIcon: 'glyphicon-folder-open',
-            closedNodeIcon: 'glyphicon-folder-close',
-            leafNodeIcon: 'glyphicon-file'
-        }
-    });
-});
-function closeTree(){
-    $('#tree').bootstrapTree('closeAll');
-}
-function openTree(){
-    $('#tree').bootstrapTree('openAll');
-}
-function destroy(){
-	$('#tree').bootstrapTree('destroy');
-}
-function init(){
-	$('#tree').bootstrapTree('init');
-}
-</script>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<link rel="stylesheet" href="http://apps.bdimg.com/libs/bootstrap/3.3.4/css/bootstrap.min.css">
 </head>
 <body>
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-navbar-collapse" aria-expanded="false">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">bootstrap tree</a>
-    </div>
-    <div class="collapse navbar-collapse" id="nav-navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li><a href="#demo">示例</a>
-        <li><a href="#usage">用法</a>
-        <li><a href="#parameter">参数</a>
-        <li><a href="#function">方法</a>
-      </ul>
-    </div> 
+  <div id="container">
+    <p><a href="bootstrap-tree/index.html">Bootstrap Tree</a></p>
   </div>
-</nav>
-<script>
-$('#nav-navbar-collapse > ul >li').mouseover(function(){
-	$(this).addClass('active');
-}).mouseout(function(){
-	$(this).removeClass('active');
-});
-</script>
-<div class="container well">
-  <div class="alert alert-danger">目前仅支持v3版本</div>
-  <div id="download">
-    <a href="https://github.com/ofedge/bootstrap-tree/archive/master.zip" class="btn btn-primary">下载</a>
-    <a href="https://github.com/ofedge/bootstrap-tree" class="btn btn-primary">源码</a>
-  </div>
-  <div id="demo">
-    <fieldset>
-      <legend>bootstrap tree 示例</legend>
-      <div id="tree">
-        <ul>
-          <li><span> 父节点</span> <a href="#">链接1</a>
-            <ul>
-              <li><span> 子节点</span> <a href="#">链接2</a>
-                <ul>
-                  <li><span> 子子节点</span> <a href="#">链接3</a>
-                    <ul>
-                      <li><span> 子子子节点</span> <a href="#">链接4</a></li>
-                    </ul>
-                  </li>
-                </ul>
-                <ul>
-                  <li><span> 子子节点</span> <a href="#">链接5</a></li>
-                </ul>
-              </li>
-            </ul>
-            <ul>
-              <li><span> 子节点</span> <a href="#">链接6</a>
-                <ul>
-                  <li><span> 子子节点</span> <a href="#">链接7</a>
-                    <ul>
-                      <li><span> 子子子节点</span> <a href="#">链接8</a>
-                      </li>
-                    </ul>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-            <ul>
-              <li><span> 子节点</span> <a href="#">链接9</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-    </fieldset>
-    <button class="btn btn-default" onclick="closeTree()">关闭</button>
-    <button class="btn btn-default" onclick="openTree()">打开</button>
-    <button class="btn btn-default" onclick="destroy()">销毁</button>
-    <button class="btn btn-default" onclick="init()">初始化</button>
-  </div>
-  <hr>
-  <div id="usage">
-    <fieldset>
-      <legend>用法</legend>
-      <p>示例html代码, 注意这里的<code>&lt;span&gt;</code>里除了节点文本不要加其他内容, 如果需要在<code>&lt;span&gt;</code>之后加.</p>
-      <pre>
-&lt;div id="tree-demo"&gt;
-  &lt;ul&gt;
-    &lt;li&gt;&lt;span&gt; 父节点&lt;/span&gt; &lt;a href="#"&gt;链接1&lt;/a&gt;
-      &lt;ul&gt;
-        &lt;li&gt;&lt;span&gt; 子节点&lt;/span&gt; &lt;a href="#"&gt;链接2&lt;/a&gt;
-          &lt;ul&gt;
-            &lt;li&gt;&lt;span&gt; 子子节点&lt;/span&gt; &lt;a href="#"&gt;链接3&lt;/a&gt;
-              &lt;ul&gt;
-                &lt;li&gt;&lt;span&gt; 子子子节点&lt;/span&gt; &lt;a href="#"&gt;链接4&lt;/a&gt;&lt;/li&gt;
-              &lt;/ul&gt;
-            &lt;/li&gt;
-          &lt;/ul&gt;
-          &lt;ul&gt;
-            &lt;li&gt;&lt;span&gt; 子子节点&lt;/span&gt; &lt;a href="#"&gt;链接5&lt;/a&gt;&lt;/li&gt;
-          &lt;/ul&gt;
-        &lt;/li&gt;
-      &lt;/ul&gt;
-      &lt;ul&gt;
-        &lt;li&gt;&lt;span&gt; 子节点&lt;/span&gt; &lt;a href="#"&gt;链接6&lt;/a&gt;
-          &lt;ul&gt;
-            &lt;li&gt;&lt;span&gt; 子子节点&lt;/span&gt; &lt;a href="#"&gt;链接7&lt;/a&gt;
-              &lt;ul&gt;
-                &lt;li&gt;&lt;span&gt; 子子子节点&lt;/span&gt; &lt;a href="#"&gt;链接8&lt;/a&gt;
-                &lt;/li&gt;
-              &lt;/ul&gt;
-            &lt;/li&gt;
-          &lt;/ul&gt;
-        &lt;/li&gt;
-      &lt;/ul&gt;
-      &lt;ul&gt;
-        &lt;li&gt;&lt;span&gt; 子节点&lt;/span&gt; &lt;a href="#"&gt;链接9&lt;/a&gt;&lt;/li&gt;
-      &lt;/ul&gt;
-    &lt;/li&gt;
-  &lt;/ul&gt;
-&lt;/div&gt;
-      </pre>
-      <p>调用: <code>$('#tree-demo').bootstrapTree();</code></p>
-    </fieldset>
-  </div>
-  <hr>
-  <div id="parameter">
-    <fieldset>
-      <legend>参数</legend>
-      <div class="well">
-        <ul>
-          <li><span>openOnLoad: 默认false, 初始化时候是否展开树</span></li>
-          <li>
-            <span>icons: 图标</span>
-            <ul>
-              <li>openedNodeIcon: 节点打开时候的图标, 默认 glyphicon-minus</li>
-              <li>closedNodeIcon: 节点关闭时候的图标, 默认 glyphicon-plus</li>
-              <li>leafNodeIcon: 叶子节点图标, 默认 glyphicon-leaf</li>
-            </ul>
-          </li>
-        </ul>
-        <p>使用</p>
-        <pre>
-$('#tree').bootstrapTree({
-    openOnLoad: false,
-    icons: {
-        openedNodeIcon: 'glyphicon-folder-open',
-        closedNodeIcon: 'glyphicon-folder-close',
-        leafNodeIcon: 'glyphicon-file'
-    }
-});
-        </pre>
-      </div>
-    </fieldset>
-  </div>
-  <hr>
-  <div id="function">
-    <fieldset>
-      <legend>方法</legend>
-      <div class="well">
-        <ul>
-          <li>
-            <span>openAll: 打开所有节点</span>
-            <ul>
-              <li><code>$('#tree').bootstrapTree('openAll');</code></li>
-            </ul>
-          </li>
-          <li>
-            <span>closeAll: 关闭所有节点</span>
-            <ul>
-              <li><code>$('#tree').bootstrapTree('closeAll');</code></li>
-            </ul>
-          </li>
-          <li>
-            <span>destroy: 销毁节点点击事件</span>
-            <ul>
-              <li><code>$('#tree').bootstrapTree('destroy');</code></li>
-            </ul>
-          </li>
-          <li>
-            <span>init: 添加节点点击事件</span>
-            <ul>
-              <li><code>$('#tree').bootstrapTree('init');</code></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-    </fieldset>
-  </div>
-</div>
-<footer>
-  <div class="container">
-    <ul>
-      <li><a href="http://jquery.com">jQuery</a>
-      <li><a href="http://www.bootcss.com/">Bootstrap 中文网</a>
-      <li><a href="http://glyphicons.com/">glyphicons</a>
-      <li>基于: <a href="http://runjs.cn/detail/yb2n864s">bootstrap tree</a>
-    </ul>
-  </div>
-</footer>
 </body>
 </html>
