--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>我的jquery插件</title>
 <link rel="stylesheet" href="http://apps.bdimg.com/libs/bootstrap/3.3.4/css/bootstrap.min.css">
+<style>
+.container { padding-top: 70px }
+</style>
 </head>
 <body>
-  <div id="container">
-    <p><a href="bootstrap-tree/index.html">Bootstrap Tree</a></p>
+  <div class="container">
+    <div class="jumbotron">
+      <p><a href="bootstrap-tree/index.html">Bootstrap Tree</a>: bootstrap树结构插件</p>
+    </div>
   </div>
 </body>
 </html>
