--- a/bootstrap-tree/index.html
+++ b/bootstrap-tree/index.html
@@ -7,14 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="Keywords" content="bootstrap tree">
 <meta name="Description" content="基于bootstrap的树插件">
-<link rel="stylesheet" href="http://apps.bdimg.com/libs/bootstrap/3.3.4/css/bootstrap.min.css">
+<link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="bootstrap-tree.min.css">
 <style>
 body { padding-top: 70px; }
 #demo:target, #usage:target, #parameter:target, #function:target { padding-top: 70px; }
 ul li { list-style: none; }
 </style>
-<script src="http://apps.bdimg.com/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="//cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 <script src="bootstrap-tree.min.js"></script>
 <script>
 $(function(){
