--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div class="container">
     <div class="jumbotron">
       <p><a href="bootstrap-tree/index.html">Bootstrap Tree</a>: bootstrap树结构插件</p>
+      <p><a href="bootstrap-tree/index.html">Province And City</a>: 省市级联插件插件</p>
     </div>
   </div>
 </body>
