--- a/bootstrap-tree/index.html
+++ b/bootstrap-tree/index.html
@@ -61,6 +61,9 @@ function init(){
         <li><a href="#parameter">参数</a>
         <li><a href="#function">方法</a>
       </ul>
+      <ul class="nav navbar-nav navbar-right">
+          <li><a href="../index.html">返回</a></li>
+        </ul>
     </div> 
   </div>
 </nav>
