--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>我的jquery插件</title>
-<link rel="stylesheet" href="http://apps.bdimg.com/libs/bootstrap/3.3.4/css/bootstrap.min.css">
+<link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
 <style>
 .container { padding-top: 70px }
 </style>
@@ -12,7 +12,7 @@
   <div class="container">
     <div class="jumbotron">
       <p><a href="bootstrap-tree/index.html">Bootstrap Tree</a>: bootstrap树结构插件</p>
-      <p><a href="provinceandcity/index.html">Province And City</a>: 省市级联插件插件</p>
+      <p><a href="provinceandcity/index.html">Province And City</a>: 省市级联插件</p>
     </div>
   </div>
 </body>
