--- a/provinceandcity/index.html
+++ b/provinceandcity/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+<link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
 <style>
 body { padding-top: 70px }
 demo:target, #usage:target { padding-top: 70px }
 </style>
-<script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+<script src="//cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 <script src="allCity.js"></script>
 <script src="provinceandcity.js"></script>
 <script>
@@ -38,6 +38,9 @@ $(function(){
         <ul class="nav navbar-nav">
           <li><a href="#demo">示例</a>
           <li><a href="#usage">用法</a>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="../index.html">返回</a></li>
         </ul>
       </div> 
    </div>
