--- a/bootstrap-tree/index.html
+++ b/bootstrap-tree/index.html
@@ -7,14 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="Keywords" content="bootstrap tree">
 <meta name="Description" content="基于bootstrap的树插件">
-<link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+<link href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="bootstrap-tree.min.css">
 <style>
 body { padding-top: 70px; }
 #demo:target, #usage:target, #parameter:target, #function:target { padding-top: 70px; }
 ul li { list-style: none; }
 </style>
-<script src="//cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+<script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 <script src="bootstrap-tree.min.js"></script>
 <script>
 $(function(){
@@ -78,7 +78,7 @@ $('#nav-navbar-collapse > ul >li').mouseover(function(){
   <div class="alert alert-danger">目前仅支持v3版本</div>
   <div id="download">
     <a href="https://github.com/ofedge/bootstrap-tree/archive/master.zip" class="btn btn-primary">下载</a>
-    <a href="https://github.com/ofedge/bootstrap-tree" class="btn btn-primary">源码</a>
+    <a href="https://github.com/ofedge/jquery-plugin/tree/master/bootstrap-tree" class="btn btn-primary">源码</a>
   </div>
   <div id="demo">
     <fieldset>
