--- a/provinceandcity/index.html
+++ b/provinceandcity/index.html
@@ -49,6 +49,10 @@ $(function(){
    </div>
   </nav>
   <div class="container">
+    <div style="margin:10px 0">
+      <a href="https://github.com/ofedge/bootstrap-tree/archive/master.zip" class="btn btn-primary">下载</a>
+      <a href="https://github.com/ofedge/jquery-plugin/tree/master/provinceandcity" class="btn btn-primary">源码</a>
+    </div>
     <fieldset id="demo">
       <legend>示例</legend>
       <div class="well col-md-5">
