--- a/provinceandcity/index.html
+++ b/provinceandcity/index.html
@@ -34,9 +34,9 @@ $(function(){
 		province: '#p',
 		city: '#c',
 		district: '#d',
-		provinceValue: '河南',
-		cityValue: '郑州',
-		districtValue: '二七'
+		provinceValue: '台湾',
+		cityValue: '台湾',
+		districtValue: '基隆'
 	});
 });
 </script>
