add Parameter 'textValue'

--- a/provinceandcity/index.html
+++ b/provinceandcity/index.html
@@ -36,7 +36,8 @@ $(function(){
 		district: '#d',
 		provinceValue: '台湾',
 		cityValue: '台湾',
-		districtValue: '基隆'
+		districtValue: '基隆',
+		textValue: true
 	});
 });
 </script>
