--- a/bootstrap-tree/index.html
+++ b/bootstrap-tree/index.html
@@ -7,14 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="Keywords" content="bootstrap tree">
 <meta name="Description" content="基于bootstrap的树插件">
-<link href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha512-Dop/vW3iOtayerlYAqCgkVr2aTr2ErwwTYOvRFUpzl2VhCMJyjQF0Q9TjUXIo6JhuM/3i0vVEt2e/7QQmnHQqw==" crossorigin="anonymous" />
 <link rel="stylesheet" href="bootstrap-tree.min.css">
 <style>
 body { padding-top: 70px; }
 #demo:target, #usage:target, #parameter:target, #function:target { padding-top: 70px; }
 ul li { list-style: none; }
 </style>
-<script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js" integrity="sha512-nhY06wKras39lb9lRO76J4397CH1XpRSLfLJSftTeo3+q2vP7PaebILH9TqH+GRpnOhfAGjuYMVmVTOZJ+682w==" crossorigin="anonymous"></script>
 <script src="bootstrap-tree.min.js"></script>
 <script>
 $(function(){
